# ara

./: .gitignore  build.sh  build_and_run_gui.sh  prepare.sh  readme.txt  run.sh
build_wasm/: Makefile
src/: CMakeLists.txt
src/engine/: CMakeLists.txt
src/engine/include/: commons.h  entity.h  entity_camera.h  entity_empty.h  entity_sprite.h  entity_square.h  entity_text.h  gl_framebuffer.h  gl_global_buffers.h  gl_globals.h  gl_shader.h  project.h  render_text.h  scene.h  shader.h  texture.h  utils_data.h  utils_fluids.h  utils_transforms.h  window.h  window_input.h  window_input_keys.h
src/engine/include/conf/: conf_fnts.h
src/engine/include/gui/: gui.h
src/engine/jsbuild/: build.sh
src/engine/jsbuild/server/: go.mod  main.go
src/engine/jsbuild/web/: index.html
src/engine/src/: entity.cpp  entity_camera.cpp  entity_empty.cpp  entity_sprite.cpp  entity_square.cpp  entity_text.cpp  gl_framebuffer.cpp  gl_global_buffers.cpp  gl_globals.cpp  gl_shader.cpp  project.cpp  render_text.cpp  scene.cpp  shader.cpp  texture.cpp  utils_data.cpp  utils_fluid.cpp  utils_transforms.cpp  window.cpp  window_input.cpp
src/engine/src/conf/: conf_fnts.cpp
src/engine/src/gui/: gui.cpp
src/gui/: CMakeLists.txt  main.cpp
src/gui/include/: grid.h  gui_entities.h  gui_explorer.h  gui_menu.h  gui_new_project.h  gui_new_scene.h  gui_open_project.h  gui_scene_editor.h  gui_window.h  project_manager.h  utils_editor.h
src/gui/src/: grid.cpp  gui_entities.cpp  gui_explorer.cpp  gui_menu.cpp  gui_new_project.cpp  gui_new_scene.cpp  gui_open_project.cpp  gui_scene_editor.cpp  gui_window.cpp  project_manager.cpp  utils_editor.cpp
src/include/: version.hpp.in
src/lib/SQLiteCpp/: CMakeLists.txt
src/lib/SQLiteCpp/include/SQLiteCpp/: Statement.h
src/lib/glad/: CMakeLists.txt
src/lib/glfw/include/GLFW/: glfw3.h
